fantascene-dynamic-wallpaper-git: auto updated to 1.9.9.r4.ga48dff0-1

--- a/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
+++ b/aur-repo/fantascene-dynamic-wallpaper-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=fantascene-dynamic-wallpaper-git
 srcname=fantascene-dynamic-wallpaper-git
-pkgver=1.9.9.r3.g1cf9734
-pkgrel=2
+pkgver=1.9.9.r4.ga48dff0
+pkgrel=1
 pkgdesc=" dynamic wallpaper. A very nice animated wallpaper on X11 systems.Support Movie and Web animated wallpaper."
 arch=($CARCH)
 url="https://github.com/dependon/fantascene-dynamic-wallpaper"
