--- a/aur-repo/nibtools-git/PKGBUILD
+++ b/aur-repo/nibtools-git/PKGBUILD
@@ -2,24 +2,17 @@
 
 pkgname=nibtools-git
 _pkgname=nibtools
-pkgver=r695.91344e0
+pkgver=r698.1d0946a
 pkgrel=1
 pkgdesc="Commodore 1541/1571 disk image nibbler"
 arch=('i686' 'x86_64')
-url="https://c64preservation.com/dp.php?pg=nibtools"
+url="https://diskpreservation.com/dp.php?pg=nibtools"
 license=('unknown')
 depends=('opencbm')
 makedepends=('git' 'cc65')
 provides=('nibtools')
-source=('git+https://github.com/OpenCBM/nibtools.git'
-	'usleep.patch')
-md5sums=('SKIP'
-         'bd7d136a698bca9b161ab72622205c3b')
-
-prepare() {
-  cd "${srcdir}/${_pkgname}"
-  patch -p1 -i ../usleep.patch
-}
+source=('git+https://github.com/rittwage/nibtools.git')
+md5sums=('SKIP')
 
 pkgver() {
   cd "${srcdir}/${_pkgname}"
