--- a/aur-repo/librnd4-svn/PKGBUILD
+++ b/aur-repo/librnd4-svn/PKGBUILD
@@ -7,8 +7,8 @@ pkgdesc="free/open source, flexible, modular two-dimensional CAD engine"
 arch=($CARCH)
 url="http://www.repo.hu/projects/librnd"
 license=('LGPL-2.0-or-later')
-provides=(${pkgname%-svn})
-conflicts=(${pkgname%-svn})
+provides=('librnd4>=4.1.0' 'librnd3')
+conflicts=('librnd4>=4.1.0' 'librnd3')
 depends=(
     glibc
     sh
