--- a/aur-repo/strmassistant-bin/PKGBUILD
+++ b/aur-repo/strmassistant-bin/PKGBUILD
@@ -10,17 +10,17 @@ epoch=
 pkgdesc="Strm Assistant for Emby"
 arch=(x86_64)
 url="https://github.com/sjtuross/StrmAssistant"
-license=('MIT')
+license=('GPL-3.0-or-later')
 replaces=()
 depends=(emby-server)
 makedepends=()
 optdepends=("emby-theater: An Electron app for Emby")
 backup=()
 options=('!strip' '!debug' '!lto')
-source=("${_name}-${pkgver}.dll::https://github.com/sjtuross/StrmAssistant/releases/download/v${pkgver}/${_name}.dll"
-    "${_namel}-${pkgver}.dll::https://github.com/sjtuross/StrmAssistant/releases/download/v${pkgver}/${_namel}.dll")
+source=("${_name}-${pkgver}.dll::${url}/releases/download/v${pkgver}/${_name}.dll"
+    "${_namel}-${pkgver}.dll::${url}/releases/download/v${pkgver}/${_namel}.dll")
 sha256sums=('188de56b3e1c0d14281b57503bde7b323ec7573bde33e5ae226ac659557491c9'
-            '48762ae02d76ba12ebdbe4315f106f41f228697856eda39456885d7c3693250c')
+    '48762ae02d76ba12ebdbe4315f106f41f228697856eda39456885d7c3693250c')
 noextract=()
 
 package_strmassistant-bin() {
