--- a/aur-repo/python-flet/lilac.yaml
+++ b/aur-repo/python-flet/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['patlefort'])
+pre_build_script: |
+  aur_pre_build(maintainers=['patlefort'])
+  add_makedepends(['cmake')
 post_build: aur_post_build
 repo_depends:
   - python-copier
