--- a/aur-repo/davfs2/lilac.yaml
+++ b/aur-repo/davfs2/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['Kewl', 'skyenet'])
+pre_build_script: |
+  aur_pre_build(maintainers=['Kewl', 'skyenet'])
+  add_makedepends(['pkgconf'])
 post_build: aur_post_build
 update_on:
   - source: aur
