--- a/aur-repo/mediawarp-git/PKGBUILD
+++ b/aur-repo/mediawarp-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgname=mediawarp-git
 _name=MediaWarp
-pkgver=0.0.5.r19.gff38e54
-pkgrel=6
+pkgver=0.0.6.r16.g22b828d
+pkgrel=1
 pkgdesc="EmbyServer API Optimization: Optimize playback of Strm files, customize the front-end style, customize the allowed access to the client, embedded scripts, work with Alist to realize Emby playback of web resources, recommended to use with AutoFilm."
 arch=($CARCH)
 url="https://github.com/Akimio521/MediaWarp"
