--- a/aur-repo/python-scripts/lilac.yaml
+++ b/aur-repo/python-scripts/lilac.yaml
@@ -1,6 +1,15 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['If_Return'])
+pre_build_script: |
+  aur_pre_build(maintainers=['If_Return'])
+  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-scripts'])
+
+  for line in edit_file('PKGBUILD'):
+    if line.startswith('check() {'):
+      line = "_check() {"
+    print(line)
+
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 repo_depends:
   - python-stua
