--- a/aur-repo/python-scripts/PKGBUILD
+++ b/aur-repo/python-scripts/PKGBUILD
@@ -3,7 +3,7 @@
 _pkgname=scripts
 pkgname=python-scripts
 pkgver=3.0.0
-pkgrel=4
+pkgrel=5
 pkgdesc="A collection of various shell scripts"
 arch=('any')
 url='https://github.com/rsalmaso/scripts'
@@ -19,7 +19,7 @@ build() {
   python setup.py build
 }
 
-check() {
+_check() {
   cd "$_pkgname-$pkgver"
   python setup.py test
 }
