--- a/aur-repo/python-bflb-crypto-plus/PKGBUILD
+++ b/aur-repo/python-bflb-crypto-plus/PKGBUILD
@@ -33,7 +33,7 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/b1/a4/bda733fe91c9b3424627597768bf8ab2cf683f1e81a88544d126f94536bd/$_name-$pkgver.tar.gz")
+source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
 sha256sums=('b1b483874e5d2ecb49f9f85259715ad94b76f9627b3de9fa677f6ca5ce666242')
 #validpgpkeys=()
