--- a/aur-repo/python-exscript/lilac.yaml
+++ b/aur-repo/python-exscript/lilac.yaml
@@ -7,4 +7,7 @@ repo_depends:
 update_on:
   - source: aur
     aur: python-exscript
+  - source: alpm
+    alpm: python-future
+    # provided: python-future
   - alias: python
