--- a/aur-repo/python-exscript/lilac.yaml
+++ b/aur-repo/python-exscript/lilac.yaml
@@ -4,10 +4,11 @@ pre_build_script: aur_pre_build(maintainers=['SelfRef'])
 post_build: aur_post_build
 repo_depends:
   - python-configparser
+  - python-future
 update_on:
   - source: aur
     aur: python-exscript
-  - source: alpm
-    alpm: python-future
-    # provided: python-future
+  # - source: alpm
+  #   alpm: python-future
+  # provided: python-future
   - alias: python
