--- a/aur-repo/python-kinparse/lilac.yaml
+++ b/aur-repo/python-kinparse/lilac.yaml
@@ -2,6 +2,8 @@ maintainers:
   - github: taotieren
 pre_build_script: aur_pre_build(maintainers=['cbjamo'])
 post_build: aur_post_build
+repo_depends:
+  - python-future
 update_on:
   - source: aur
     aur: python-kinparse
