--- a/aur-repo/python-xvfbwrapper/lilac.yaml
+++ b/aur-repo/python-xvfbwrapper/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='carsme')
+pre_build_script: aur_pre_build(maintainers=['txtsd'])
 post_build: aur_post_build
 update_on:
   - source: aur
