--- a/aur-repo/python-jlc2kicadlib/PKGBUILD
+++ b/aur-repo/python-jlc2kicadlib/PKGBUILD
@@ -18,20 +18,20 @@ _pydeps=(
 depends=('python'
     "${_pydeps[@]/#/python-}")
 makedepends=(python-build
-            python-installer
-            python-wheel
-            python-setuptools)
+    python-installer
+    python-wheel
+    python-setuptools)
 options=('!strip')
-source=("${_name//-/_}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/${_name//-/_}-$pkgver.tar.gz")
+source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/${_name}-$pkgver.tar.gz")
 noextract=()
 sha256sums=('ef9c51b3f612a5e055f356b19b657a94dc907d8c67708ebb976d698defa06448')
 
 build() {
-    cd "${srcdir}/${_name//-/_}-${pkgver}"
+    cd "${srcdir}/${_name}-${pkgver}"
     python -m build --wheel --no-isolation
 }
 
 package() {
-    cd "${srcdir}/${_name//-/_}-${pkgver}"
+    cd "${srcdir}/${_name}-${pkgver}"
     python -m installer --destdir="${pkgdir}" dist/*.whl
 }
