--- a/aur-repo/python-kipart/lilac.yaml
+++ b/aur-repo/python-kipart/lilac.yaml
@@ -8,6 +8,7 @@ post_build_script: |
 repo_depends:
   - python-affine
   - python-sexpdata
+  - python-future
 update_on:
   - source: pypi
     pypi: kipart
