--- a/aur-repo/python-mecab/lilac.yaml
+++ b/aur-repo/python-mecab/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers='envolution')
+pre_build_script: |
+  aur_pre_build(maintainers='envolution')
+  add_makedepends(['python-build', 'python-installer'])
 post_build: aur_post_build
 repo_depends:
   - mecab-git
