--- a/aur-repo/python-kintree/lilac.yaml
+++ b/aur-repo/python-kintree/lilac.yaml
@@ -3,7 +3,7 @@ maintainers:
 pre_build_script: aur_pre_build(maintainers=['GPereira'])
 post_build: aur_post_build
 repo_depends:
-  - python-digikey-api
+  - python-digikey-api-git
   - python-flet
   - python-kiutils
   - python-inventree
