--- a/aur-repo/python-mecab/lilac.yaml
+++ b/aur-repo/python-mecab/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 pre_build_script: |
   aur_pre_build(maintainers='envolution')
-  add_makedepends(['python-build', 'python-installer'])
+  add_makedepends(['python-build', 'python-installer', 'python-setuptools-scm'])
 post_build: aur_post_build
 repo_depends:
   - mecab-git
