--- a/aur-repo/python-mecab/PKGBUILD
+++ b/aur-repo/python-mecab/PKGBUILD
@@ -5,13 +5,13 @@
 pkgname=python-mecab
 _pkgname=mecab-python3
 pkgver=1.0.9
-pkgrel=1
+pkgrel=2
 pkgdesc="Morphological Analysis Tool - Python3 interface"
 arch=('x86_64' 'i686')
 url="http://taku910.github.io/mecab/"
 license=('BSD' 'LGPL2.1' 'GPL2')
 depends=('python' 'mecab' 'mecab-ipadic')
-makedepends=('python-setuptools' 'python-wheel' 'python-pip' 'git' 'swig')
+makedepends=("git" "python-build" "python-installer" "python-pip" "python-setuptools" "python-setuptools-scm" "python-wheel" "swig")
 source=("git+https://github.com/SamuraiT/mecab-python3.git#tag=v${pkgver}")
 sha1sums=('810fd4d5bf17736d903c738f6c14a4d93bafeb44')
 
