--- a/aur-repo/python-flet/lilac.yaml
+++ b/aur-repo/python-flet/lilac.yaml
@@ -2,7 +2,7 @@ maintainers:
   - github: taotieren
 pre_build_script: |
   aur_pre_build(maintainers=['patlefort'])
-  add_makedepends(['cmake', 'ninja'])
+  add_makedepends(['cmake', 'ninja', 'clang', 'llvm'])
 post_build: aur_post_build
 repo_depends:
   - python-copier
