--- a/aur-repo/python-digikey-api-git/lilac.yaml
+++ b/aur-repo/python-digikey-api-git/lilac.yaml
@@ -3,6 +3,14 @@ maintainers:
 pre_build_script: |
   aur_pre_build(maintainers=['andrejr'])
   add_makedepends(['git'])
+  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-digikey-api-git'])
+
+  for line in edit_file('PKGBUILD'):
+    if line.startswith('cd "$pkgname"'):
+      line = "cd "$srcdir/$pkgname""
+    print(line)
+
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 repo_depends:
   - python-certauth
