--- a/aur-repo/python-digikey-api-git/lilac.yaml
+++ b/aur-repo/python-digikey-api-git/lilac.yaml
@@ -6,8 +6,8 @@ pre_build_script: |
   run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-digikey-api-git'])
 
   for line in edit_file('PKGBUILD'):
-    if line.startswith('cd "$pkgname"'):
-      line = "cd $srcdir/$pkgname"
+    if line.startswith('#commit=10b91ac61458e42f7757fd6c060766b5b9515314'):
+      line = ""
     print(line)
 
   run_cmd(['updpkgsums'])
