--- a/aur-repo/python-digikey-api-git/lilac.yaml
+++ b/aur-repo/python-digikey-api-git/lilac.yaml
@@ -7,7 +7,7 @@ pre_build_script: |
 
   for line in edit_file('PKGBUILD'):
     if line.startswith('https://github.com/hvraven/digikey-api.git#commit=10b91ac61458e42f7757fd6c060766b5b9515314'):
-      line = "https://github.com/hvraven/digikey-api.git")"
+      line = "https://github.com/hvraven/digikey-api.git"
     print(line)
 
   run_cmd(['updpkgsums'])
