--- a/aur-repo/python-digikey-api-git/lilac.yaml
+++ b/aur-repo/python-digikey-api-git/lilac.yaml
@@ -3,14 +3,6 @@ maintainers:
 pre_build_script: |
   aur_pre_build(maintainers=['andrejr'])
   add_makedepends(['git'])
-  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-digikey-api-git'])
-
-  for line in edit_file('PKGBUILD'):
-    if line.startswith('https://github.com/hvraven/digikey-api.git#commit=10b91ac61458e42f7757fd6c060766b5b9515314'):
-      line = "https://github.com/hvraven/digikey-api.git"
-    print(line)
-
-  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 repo_depends:
   - python-certauth
@@ -20,3 +12,12 @@ update_on:
   - source: aur
     aur: python-digikey-api-git
   - alias: python
+
+# run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=python-digikey-api-git'])
+#
+# for line in edit_file('PKGBUILD'):
+#   if line.startswith('https://github.com/hvraven/digikey-api.git#commit=10b91ac61458e42f7757fd6c060766b5b9515314'):
+#     line = "https://github.com/hvraven/digikey-api.git"
+#   print(line)
+#
+# run_cmd(['updpkgsums'])
