--- a/aur-repo/pine64-rkdeveloptool-git/lilac.yaml
+++ b/aur-repo/pine64-rkdeveloptool-git/lilac.yaml
@@ -16,4 +16,4 @@ post_build_script: |
   git_pkgbuild_commit()
 update_on:
   - source: gitlab
-    github: pine64-org/quartz-bsp/rkdeveloptool
+    gitlab: pine64-org/quartz-bsp/rkdeveloptool
