--- a/aur-repo/python-kicadmodtree/lilac.yaml
+++ b/aur-repo/python-kicadmodtree/lilac.yaml
@@ -6,6 +6,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - python-future
 update_on:
   - source: gitlab
     gitlab: kicad/libraries/kicad-footprint-generator
