--- a/aur-repo/python-kicadmodtree/PKGBUILD
+++ b/aur-repo/python-kicadmodtree/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-kicadmodtree
-pkgver=1.1.2.r2423.g0cbe1e8
+pkgver=1.1.2.r2427.gfc887ab
 pkgrel=1
 epoch=
 pkgdesc="This repository contains scripts to generate custom KiCAD footprints using python, and a framework which allows us to create custom KiCAD footprint. A big bunch of footprints of the KiCad library was developed using this framework."
