gopeed-bin: auto updated to 1.6.5-1

--- a/aur-repo/gopeed-bin/PKGBUILD
+++ b/aur-repo/gopeed-bin/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: zxp19821005 <zxp19821005 at 163 dot com>
 pkgname=gopeed-bin
 _pkgname=Gopeed
-pkgver=1.6.4
+pkgver=1.6.5
 pkgrel=1
 pkgdesc="High speed downloader that supports all platforms.(Prebuilt version)"
 arch=('x86_64')
@@ -21,9 +21,9 @@ source=(
     "${pkgname%-bin}-${pkgver}.deb::${_ghurl}/releases/download/v${pkgver}/${_pkgname}-v${pkgver}-linux-amd64.deb"
     "${pkgname%-bin}.sh"
 )
-sha256sums=('b5f05ea1495938c98679e28d826db65ff43360a394a3323c76ddc7efa4e2a81e'
+sha256sums=('a45c45c3c64d57cbb459b7a1e7f8ff129b87f468b28c55722e5d8cee352beed7'
             '3b8311438e88f47eb507322a43c7a4156bfebb8c0f6e7b7436ef70842fb4c745')
-build() {
+prepare() {
     sed -e "
         s/@appname@/${pkgname%-bin}/g
         s/@runname@/${pkgname%-bin}/g
