--- a/aur-repo/ttf-lxgw-wenkai-lite/PKGBUILD
+++ b/aur-repo/ttf-lxgw-wenkai-lite/PKGBUILD
@@ -18,17 +18,13 @@ package_ttf-lxgw-wenkai-lite() {
     pkgdesc="LXGW WenKai Lite / 霞鹜文楷轻便版 An open-source Chinese font derived from Fontworks' Klee One. 一款基于 FONTWORKS 出品字体 Klee One 改造的开源中文字体。"
     install -d "$pkgdir/usr/share/fonts/TTF"
     cd ${srcdir}/lxgw-wenkai-lite-v$pkgver
-    install -m644 LXGWWenKaiLite-Bold.ttf "$pkgdir/usr/share/fonts/TTF/"
-    install -m644 LXGWWenKaiLite-Light.ttf "$pkgdir/usr/share/fonts/TTF/"
-    install -m644 LXGWWenKaiLite-Regular.ttf "$pkgdir/usr/share/fonts/TTF/"
+    cp -rv LXGWWenKaiLite-*.ttf "$pkgdir/usr/share/fonts/TTF/"
 }
 
 package_ttf-lxgw-wenkai-mono-lite() {
     pkgdesc="LXGW WenKai Mono Lite / 霞鹜文楷等宽轻便版 An open-source Chinese font derived from Fontworks' Klee One. 一款基于 FONTWORKS 出品字体 Klee One 改造的开源中文字体。"
     install -d "$pkgdir/usr/share/fonts/TTF"
     cd ${srcdir}/lxgw-wenkai-lite-v$pkgver
-    install -m644 LXGWWenKaiMonoLite-Bold.ttf "$pkgdir/usr/share/fonts/TTF/"
-    install -m644 LXGWWenKaiMonoLite-Light.ttf "$pkgdir/usr/share/fonts/TTF/"
-    install -m644 LXGWWenKaiMonoLite-Regular.ttf "$pkgdir/usr/share/fonts/TTF/"
+    cp -rv LXGWWenKaiMonoLite-*.ttf "$pkgdir/usr/share/fonts/TTF/"
 }
 # vim: ts=4 sw=4 et
