--- a/aur-repo/socketcan-rs-git/PKGBUILD
+++ b/aur-repo/socketcan-rs-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=socketcan-rs-git
-pkgver=3.3.0.r54.gd7942d5
+pkgver=3.3.0.r81.g9b89c6f
 pkgrel=1
 pkgdesc="Linux SocketCAN access in Rust"
 arch=($CARCH)
