--- a/aur-repo/ocrs-git/PKGBUILD
+++ b/aur-repo/ocrs-git/PKGBUILD
@@ -30,7 +30,7 @@ sha256sums=('SKIP'
 
 pkgver() {
     cd "${srcdir}/${pkgbase}/"
-    git describe --long --tags | sed 's/v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags | sed 's/v//g;s/ocrs-v//g;s/ocrs-cli-v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
