--- a/aur-repo/openems/lilac.yaml
+++ b/aur-repo/openems/lilac.yaml
@@ -1,6 +1,15 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['carlosal1015'])
+pre_build_script: |
+  aur_pre_build(maintainers=['carlosal1015'])
+  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=openems'])
+
+  for line in edit_file('PKGBUILD'):
+    if line.startswith('--python'):
+      line = "--python -Wno-dev"
+    print(line)
+
+  run_cmd(['updpkgsums'])
 post_build: aur_post_build
 update_on:
   - source: aur
