--- a/aur-repo/opengnb/PKGBUILD
+++ b/aur-repo/opengnb/PKGBUILD
@@ -25,7 +25,7 @@ source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz
 sha256sums=('a68817d63dcf3e15166b52389e5bc46affcf18f910932dd8dd8eb7247eb47b9a')
 
 prepare() {
-    #     cd "${srcdir}/${pkgname}-${pkgver}"
+    cd "${srcdir}/${pkgname}-${pkgver}"
     #     sed -i -e 's|-I./libs|-I./libs -I/usr/include|g' \
     #         -e 's|-I./libs/miniupnpc/|-I/usr/include/miniupnpc|g' \
     #         -e 's|-I./libs/libnatpmp | |g' \
