--- a/aur-repo/qcsxcad-git/lilac.yaml
+++ b/aur-repo/qcsxcad-git/lilac.yaml
@@ -1,6 +1,8 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['xiota', 'thotypous', 'thasti'])
+pre_build_script: |
+  aur_pre_build(maintainers=['xiota', 'thotypous', 'thasti'])
+  add_makedepends(['git'])
 post_build: aur_post_build
 repo_depends:
   - csxcad-git
