--- a/aur-repo/appcsxcad-git/lilac.yaml
+++ b/aur-repo/appcsxcad-git/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['xiota'])
+pre_build_script: aur_pre_build(maintainers=['xiota', 'thotypous', 'thasti'])
 post_build: aur_post_build
 repo_depends:
   - csxcad-git
