--- a/aur-repo/openems-git/PKGBUILD
+++ b/aur-repo/openems-git/PKGBUILD
@@ -9,7 +9,7 @@ _pkgtype="-git"
 _pkgname="openems"
 pkgbase="$_pkgname${_pkgtype:-}"
 pkgver=0.0.36.r46.gfaec0f2
-pkgrel=2
+pkgrel=3
 pkgdesc="A free and open source EC-FDTD solver"
 url="https://github.com/thliebig/openEMS"
 license=('GPL-3.0-or-later')
@@ -67,8 +67,8 @@ sha256sums=('SKIP')
 
 pkgver() {
   cd "$_pkgsrc"
-  git describe --long --tags --abbrev=7 |
-    sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g'
+  git describe --long --tags --abbrev=7 \
+    | sed -E 's/^v//;s/([^-]*-g)/r\1/;s/-/./g'
 }
 
 _build_openems() {
