--- a/aur-repo/openems-git/lilac.yaml
+++ b/aur-repo/openems-git/lilac.yaml
@@ -1,15 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: |
-  aur_pre_build(maintainers=['thasti', 'xiota'])
-  run_cmd(['curl', '-L', '-o', 'PKGBUILD', 'https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=openems-git'])
-
-  for line in edit_file('PKGBUILD'):
-    if line.startswith('hdf5'):
-      line = "hdf5-openmpi"
-    print(line)
-
-  run_cmd(['updpkgsums'])
+pre_build_script: aur_pre_build(maintainers=['thasti', 'xiota'])
 post_build: aur_post_build
 repo_depends:
   - csxcad-git
