--- a/aur-repo/115-browser-bin/lilac.yaml
+++ b/aur-repo/115-browser-bin/lilac.yaml
@@ -12,24 +12,24 @@
 #     include_regex: '最新版本：(\d+.\d+.\d+.\d+)'
 #     regex: '115br_v([\d.]+).deb'
 
-maintainers:
-  - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
-update_on:
-  - source: aur
-    aur: 115-browser-bin
-
 # maintainers:
 #   - github: taotieren
-# pre_build_script: |
-#   update_pkgver_and_pkgrel(_G.newver)
-# post_build_script: |
-#   git_pkgbuild_commit()
-#   update_aur_repo()
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
 # update_on:
-#   - source: regex
-#     url: "https://115.com/product_browser"
-#     regex: '版本：(\d.\d.\d.\d)'
+#   - source: aur
+#     aur: 115-browser-bin
+
+maintainers:
+  - github: taotieren
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
+update_on:
+  - source: regex
+    url: https://115.com/product_browser
+    regex: 115br_v([0-9.]+)\.deb
 # - source: manual
 #   manual: 1
