--- a/aur-repo/supertabbar-git/PKGBUILD
+++ b/aur-repo/supertabbar-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgname=SuperTabbar
 pkgname=supertabbar-git
-pkgver=6c8dc30
+pkgver=r26.6c8dc30
 pkgrel=1
 pkgdesc="SuperTabbar 超级标签栏"
 arch=($CARCH)
