--- a/aur-repo/pcbmodelgen-git/PKGBUILD
+++ b/aur-repo/pcbmodelgen-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Dylan Wadler <dylan@slant.tech>
 
 pkgname=pcbmodelgen-git
-pkgver=v0.2.0.r69.gb60c441
+pkgver=v0.2.0.r71.ge5e5c4b
 provides=('pcbmodelgen')
 pkgdesc="Convert KiCAD PCB files to models for import in openEMS"
 pkgrel=1
