--- a/aur-repo/xgcom-git/lilac.yaml
+++ b/aur-repo/xgcom-git/lilac.yaml
@@ -4,6 +4,8 @@ pre_build: vcs_update
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - vte-legacy
 update_on:
   - source: github
     github: helight/xgcom
