--- a/aur-repo/xgcom/lilac.yaml
+++ b/aur-repo/xgcom/lilac.yaml
@@ -5,6 +5,8 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - vte-legacy
 update_on:
   - source: github
     github: helight/xgcom
