--- a/aur-repo/vte-legacy/lilac.yaml
+++ b/aur-repo/vte-legacy/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['bidulock', 'haawda ])
+pre_build_script: aur_pre_build(maintainers=['bidulock', 'haawda'])
 post_build: aur_post_build
 # repo_depends:
 #   - python2-gobject2
