--- a/aur-repo/python-bidi/lilac.yaml
+++ b/aur-repo/python-bidi/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['pmattern'])
+pre_build_script: aur_pre_build(maintainers=['pmattern', ' tinywrkb'])
 post_build: aur_post_build
 update_on:
   - source: aur
