--- a/aur-repo/yami4/PKGBUILD
+++ b/aur-repo/yami4/PKGBUILD
@@ -33,7 +33,7 @@ build() {
     python_version=$(echo "$python_version" | awk -F'.' '{print $1"."$2}')
     #     awk -v python_version="$python_version" '{ gsub("python3.9", "python" python_version); print }' Makefile.common >Makefile.common.tmp
     awk -v new_python_version="python$python_version" '{ gsub(/python3\.9/, new_python_version); print }' Makefile.common >Makefile.common.tmp
-    mv Makefile.common.tmp Makefile.common
+    cp -rv Makefile.common.tmp Makefile.common
 
     make build
 }
