--- a/aur-repo/nutool-usbtoserialport-git/PKGBUILD
+++ b/aur-repo/nutool-usbtoserialport-git/PKGBUILD
@@ -18,7 +18,7 @@ depends=(
 makedepends=('qt5-tools' 'git')
 checkdepends=()
 optdepends=()
-provides=('NuTool-USBtoSerialPort')
+provides=(${pkgname%-git} 'NuTool-USBtoSerialPort')
 conflicts=(${pkgname%-git})
 replaces=()
 backup=()
