--- a/aur-repo/nuwriter-git/PKGBUILD
+++ b/aur-repo/nuwriter-git/PKGBUILD
@@ -7,7 +7,7 @@ epoch=
 pkgdesc="The Nu-writer Command Tool is a linux console application consisting of functions to access storage(eg. DRAM,NAND,SPINOR,SPINAND,SD) in a NUC980 family processors"
 arch=($CARCH)
 url="https://gitee.com/OpenNuvoton/NUC980_NuWriter_CMD"
-license=(GPL-3.0-or-later)
+license=(GPL-3.0-only)
 groups=()
 depends=('libusb')
 makedepends=("gcc" "git" "automake" "pkgconf")
