--- a/aur-repo/protocol-tool-git/PKGBUILD
+++ b/aur-repo/protocol-tool-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=protocol-tool-git
 _pkgname=ProtocolTool
-pkgver=6a21a5a
+pkgver=r3.6a21a5a
 pkgrel=1
 pkgdesc="一款可配置的协议解析工具"
 arch=($CARCH)
