--- a/aur-repo/netassistant/PKGBUILD
+++ b/aur-repo/netassistant/PKGBUILD
@@ -23,7 +23,7 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("${_pkgname}-${pkgver}.tar.gz::https://download.fastgit.org/busyluo/NetAssistant/archive/refs/tags/v${pkgver}.tar.gz")
+source=("${_pkgname}-${pkgver}.tar.gz::${url}/archive/refs/tags/v${pkgver}.tar.gz")
 noextract=()
 sha256sums=('75b2397809fbde45dc6594073e7dcd2e9b00ea73a558f40b8912ca02e54b3dc4')
 #validpgpkeys=()
