--- a/aur-repo/netassistant-git/PKGBUILD
+++ b/aur-repo/netassistant-git/PKGBUILD
@@ -24,7 +24,7 @@ backup=()
 options=('!strip')
 install=
 changelog=
-source=("${_pkgname}::git+https://hub.fastgit.org/busyluo/NetAssistant.git")
+source=("${_pkgname}::git+${url}.git")
 noextract=()
 sha256sums=('SKIP')
 #validpgpkeys=()
