--- a/aur-repo/netassistant-git/PKGBUILD
+++ b/aur-repo/netassistant-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=netassistant-git
 _pkgname=NetAssistant
-pkgver=v1.0.0.r4.ge6bca9a
+pkgver=1.0.0.r4.ge6bca9a
 pkgrel=1
 epoch=
 pkgdesc="A network debugging assistant based on Qt GUI."
