--- a/aur-repo/python-magnet2torrent/PKGBUILD
+++ b/aur-repo/python-magnet2torrent/PKGBUILD
@@ -1,38 +1,33 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
-pkgname=python-115
-_name=${pkgname//-/_}
-pkgver=0.0.9.8.8.4
-pkgrel=2
+pkgname=python-magnet2torrent
+_name=${pkgname#python-}
+pkgver=1.2.1
+pkgrel=1
 epoch=
-pkgdesc="Python wrapper for 115 webdisk."
+pkgdesc="Turn a bittorrent magnet links into a .torrent file."
 arch=('any')
-url="https://pypi.org/project/python-115"
+url="https://pypi.org/project/${_name}"
 license=(MIT)
 groups=()
-provides=(${_name})
-conflicts=(${_name})
+provides=(${pkgname})
+conflicts=(${pkgname})
 depends=(
     python
-    python-httpx
-    python-orjson
-    python-requests
-    python-urllib3
+    python-aiohttp
+    python-yarl
     #AUR
-    python-glob-pattern
-    python-httpx-request
-    python-magnet2torrent
+    python-expiringdict
 )
 makedepends=(
-    python-poetry
     python-build
     python-installer
     python-wheel
     python-setuptools)
-options=('!strip')
+options=('!strip' '!debug')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
-sha256sums=('977f59892b93ea50e1fc43597becdb4d4db6e130aba917b9413e867ac13183ab')
+sha256sums=('4ba53d304f1db33d33fe227aee5b34f6e640fd2d3199ff0ec3d8cc050cded631')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
