--- a/aur-repo/python-115/lilac.yaml
+++ b/aur-repo/python-115/lilac.yaml
@@ -5,6 +5,10 @@ pre_build_script: |
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
+repo_depends:
+  - python-glob-pattern
+  - python-httpx-request
+  - python-magnet2torrent
 update_on:
   - source: pypi
     pypi: python-115
