--- a/aur-repo/python-115/PKGBUILD
+++ b/aur-repo/python-115/PKGBUILD
@@ -17,11 +17,24 @@ depends=(
     python-httpx
     python-orjson
     python-requests
+    python-rich
+    python-yarl
     python-urllib3
     #AUR
+    python-asynctools
+    python-concurrenttools
+    python-dictattr
+    python-download
+    python-filewrap
     python-glob-pattern
+    python-hashtools
+    python-httpfile
     python-httpx-request
     python-magnet2torrent
+    python-iterutils
+    python-texttools
+    python-urlopen
+    python-undefined
 )
 makedepends=(
     python-poetry
