--- a/aur-repo/python-115/lilac.yaml
+++ b/aur-repo/python-115/lilac.yaml
@@ -6,9 +6,20 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 repo_depends:
+  - python-asynctools
+  - python-concurrenttools
+  - python-dictattr
+  - python-download
+  - python-filewrap
   - python-glob-pattern
+  - python-hashtools
+  - python-httpfile
   - python-httpx-request
   - python-magnet2torrent
+  - python-iterutils
+  - python-texttools
+  - python-urlopen
+  - python-undefined
 update_on:
   - source: pypi
     pypi: python-115
