--- a/aur-repo/python-clouddrive/PKGBUILD
+++ b/aur-repo/python-clouddrive/PKGBUILD
@@ -1,49 +1,38 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
-pkgname=python-p115client
+pkgname=python-clouddrive
 _name=${pkgname#python-}
-pkgver=0.0.3.17.1
+pkgver=0.0.12.4
 pkgrel=1
 epoch=
-pkgdesc="Python 115 webdisk client."
+pkgdesc="Python wrapper for CloudDrive."
 arch=('any')
 url="https://pypi.org/project/${_name}"
 license=(MIT)
 groups=()
-provides=(${_name} ${pkgname})
-conflicts=(${_name} ${pkgname})
+provides=(${pkgname})
+conflicts=(${pkgname})
 depends=(
     python
-    python-httpx
-    python-multidict
-    python-qrcode
-    python-requests
-    python-orjson
-    python-urllib3
+    python-dateutil
+    python-grpcio
+    python-grpcio-tools
+    python-protobuf
     python-yarl
     #AUR
-    python-asynctools
-    python-cookietools
-    python-dictattr
-    python-ed2k
-    python-encode-uri
+    python-argtools
+    python-download
     python-filewrap
-    python-hashtools
     python-httpfile
     python-http-response
     python-http-request
-    python-httpx-request
-    python-iterutils
-    python-iter-collect
-    python-startfile
-    python-p115cipher
-    python-posixpatht
-    python-undefined
+    python-glob-pattern
+    python-grpclib
+    python-path-ignore-pattern
     python-urlopen
 )
 makedepends=(
     python-poetry
-    python-poetry-core
     python-build
     python-installer
     python-wheel
@@ -51,7 +40,7 @@ makedepends=(
 options=('!strip' '!debug')
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
 noextract=()
-sha256sums=('4db8efff70d4b500ca5a1cb5a08edeac88ef4219460653508d403dee1eb4a252')
+sha256sums=('83dab4bed4513cec054d45cd957a51d2d4f6d422c343554a38088574f0a4e3a6')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
