--- a/aur-repo/python-partial/PKGBUILD
+++ b/aur-repo/python-partial/PKGBUILD
@@ -28,6 +28,7 @@ sha256sums=('41de075d9a01ec9a5981591a6944c4b4cbfbb9da4d259814e55e21a70dd81e43')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
