--- a/aur-repo/python-argtools/PKGBUILD
+++ b/aur-repo/python-argtools/PKGBUILD
@@ -28,6 +28,7 @@ sha256sums=('3de043b9ac64b4ef92b459f0c356495b860a72b4769090adfd6115e884b9998d')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
