--- a/aur-repo/python-115/PKGBUILD
+++ b/aur-repo/python-115/PKGBUILD
@@ -49,6 +49,7 @@ sha256sums=('977f59892b93ea50e1fc43597becdb4d4db6e130aba917b9413e867ac13183ab')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
