--- a/aur-repo/python-concurrenttools/PKGBUILD
+++ b/aur-repo/python-concurrenttools/PKGBUILD
@@ -32,6 +32,7 @@ sha256sums=('c042d5aabac1142bda7423eae1e101202119d0248f3f3febf98b8aa097687509')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
