--- a/aur-repo/python-decotools/PKGBUILD
+++ b/aur-repo/python-decotools/PKGBUILD
@@ -31,6 +31,7 @@ sha256sums=('b9bf68578bacd24f8633c0666751f109cf0a10d0fc9c56bf2ee1bafdba76af49')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
