--- a/aur-repo/python-download/PKGBUILD
+++ b/aur-repo/python-download/PKGBUILD
@@ -34,6 +34,7 @@ sha256sums=('9f86cced9ac48af00f988e07e4638f78815f3d3b7ff3a646061a53753fb43c85')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
