--- a/aur-repo/python-encode-uri/PKGBUILD
+++ b/aur-repo/python-encode-uri/PKGBUILD
@@ -28,6 +28,7 @@ sha256sums=('afb67110d593f8024bde269ec2d4789332fe7028d907bf91e32c14f422bf9581')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
