--- a/aur-repo/python-hashtools/PKGBUILD
+++ b/aur-repo/python-hashtools/PKGBUILD
@@ -31,6 +31,7 @@ sha256sums=('f12e0b1d02bee20558b353ed9e1a72930e2a06d9df1c172d3e4db3921ca39bb4')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
