--- a/aur-repo/python-http-request/PKGBUILD
+++ b/aur-repo/python-http-request/PKGBUILD
@@ -34,6 +34,7 @@ sha256sums=('7ca5a606e0198949413315df0654b2d50185e47bd3841f9197e2a94f7dae83f5')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
