--- a/aur-repo/python-httpx-request/PKGBUILD
+++ b/aur-repo/python-httpx-request/PKGBUILD
@@ -32,6 +32,7 @@ sha256sums=('1180fc01258b7a3cc5ddc30cc78066bf681fbbd5c38f7d147a81f3093b7eee76')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
