--- a/aur-repo/python-iterutils/PKGBUILD
+++ b/aur-repo/python-iterutils/PKGBUILD
@@ -30,6 +30,7 @@ sha256sums=('b02828b7640245254b95a1d0c117f498501a4977c6243633ab8ad75a07fb35d3')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
