--- a/aur-repo/python-p115cipher/PKGBUILD
+++ b/aur-repo/python-p115cipher/PKGBUILD
@@ -33,6 +33,7 @@ sha256sums=('cb8e9d480952e2a17850f2d1dc00892e50d63f06cc021d4dcc286e9b81a505eb')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
