--- a/aur-repo/python-startfile/PKGBUILD
+++ b/aur-repo/python-startfile/PKGBUILD
@@ -28,6 +28,7 @@ sha256sums=('71d27ce9025619598149ea97b756aeb0b1b8f588f660f99f7ddc4c14cf1cab87')
 
 build() {
     cd "${srcdir}/${_name}-${pkgver}"
+    rm -rf LICENSE
     python -m build --wheel --no-isolation
 }
 
