--- a/aur-repo/python-http-request/lilac.yaml
+++ b/aur-repo/python-http-request/lilac.yaml
@@ -1,30 +1,30 @@
-# maintainers:
-#   - github: taotieren
-# pre_build_script: |
-#   update_pkgver_and_pkgrel(_G.newver)
-# post_build_script: |
-#   git_pkgbuild_commit()
-#   update_aur_repo()
-# repo_depends:
-#   - python-asynctools
-#   - python-filewrap
-#   - python-integer-tool
-#   - python-texttools
-# update_on:
-#   - source: pypi
-#     pypi: python-http-request
-#   - alias: python
-
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['taotieren'])
-post_build: aur_post_build
+pre_build_script: |
+  update_pkgver_and_pkgrel(_G.newver)
+post_build_script: |
+  git_pkgbuild_commit()
+  update_aur_repo()
 repo_depends:
   - python-asynctools
   - python-filewrap
   - python-integer-tool
   - python-texttools
 update_on:
-  - source: aur
-    aur: python-http-request
+  - source: pypi
+    pypi: python-http-request
   - alias: python
+
+# maintainers:
+#   - github: taotieren
+# pre_build_script: aur_pre_build(maintainers=['taotieren'])
+# post_build: aur_post_build
+# repo_depends:
+#   - python-asynctools
+#   - python-filewrap
+#   - python-integer-tool
+#   - python-texttools
+# update_on:
+#   - source: aur
+#     aur: python-http-request
+#   - alias: python
