--- a/aur-repo/python-clouddrive/lilac.yaml
+++ b/aur-repo/python-clouddrive/lilac.yaml
@@ -8,6 +8,7 @@ post_build_script: |
 repo_depends:
   - python-argtools
   - python-download
+  - python-concurrenttools
   - python-filewrap
   - python-httpfile
   - python-http-response
