--- a/aur-repo/python-path-predicate/PKGBUILD
+++ b/aur-repo/python-path-predicate/PKGBUILD
@@ -16,7 +16,7 @@ conflicts=(${pkgname})
 depends=(
     python
     #AUR
-    python-ignore-pattern
+    python-path-ignore-pattern
 )
 makedepends=(
     python-poetry
