--- a/aur-repo/miassistanttool-git/PKGBUILD
+++ b/aur-repo/miassistanttool-git/PKGBUILD
@@ -2,8 +2,8 @@
 
 pkgbase=miassistanttool-git
 pkgname=miassistanttool-git
-pkgver=1.1.r17.g79ecedc
-pkgrel=3
+pkgver=1.2.r0.g0912888
+pkgrel=1
 pkgdesc="MiAssistantTool"
 arch=($CARCH)
 url="https://github.com/offici5l/MiAssistantTool"
