--- a/aur-repo/miassistanttool-git/PKGBUILD
+++ b/aur-repo/miassistanttool-git/PKGBUILD
@@ -44,8 +44,8 @@ prepare() {
 
 build() {
     cd "${srcdir}/${pkgname}"
-    gcc -o ${pkgname%-git} *.c -I/usr/include/tiny-json/tiny-json.c \
-        -I/usr/include/openssl -I. -lssl -lcrypto -lcurl \
+    gcc -o ${pkgname%-git} *.c /usr/include/tiny-json/tiny-json.c \
+        -I/usr/include/openssl -lssl -lcrypto -lcurl \
         -lusb-1.0 -lcurl
 }
 
