--- a/aur-repo/proxmark3-iceman-git/PKGBUILD
+++ b/aur-repo/proxmark3-iceman-git/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=proxmark3-iceman-git
-pkgver=4.19552.r120.g4012a72
+pkgver=4.19552.r141.g2c72db9
 pkgrel=1
 pkgdesc='RRG / Iceman repo - Proxmark3 RDV4.0 and other Proxmark3 platforms.'
 arch=('x86_64')
