idl-serial-git: auto updated to r126.cf63cb2-1

--- a/aur-repo/idl-serial-git/PKGBUILD
+++ b/aur-repo/idl-serial-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=idl-serial-git
-pkgver=908c364
+pkgver=r126.cf63cb2
 pkgrel=1
 pkgdesc="This project is a IDL serial generator for c. We use flex && bison to scan and parse files and generate json to struct and struct to json code."
 arch=('any')
